@@ -8,6 +8,6 @@
 from MoinMoin.Page import Page
 
 def execute(pagename, request):
-    url = Page(request, pagename).url(request, {'action': 'show', 'mimetype': 'text/docbook'}, escape=0, relative=False)
+    url = Page(request, pagename).url(request, {'action': 'show', 'mimetype': 'text/docbook'}, relative=False)
     request.http_redirect(url)
 
