@@ -19,15 +19,15 @@ def execute(pagename, request):
 
     if pagename.endswith(sub_page_name): # sub_sub_page redirects to sub_page
         query = {}
-        url = Page(request, pagename).url(request, query, escape=0, relative=False)
+        url = Page(request, pagename).url(request, query, relative=False)
         request.http_redirect(url)
     elif request.user.may.read(newpagename) and request.user.may.write(newpagename):
         query = {}
-        url = Page(request, newpagename).url(request, query, escape=0, relative=False)
+        url = Page(request, newpagename).url(request, query, relative=False)
         test = Page(request, newpagename)
         if test.exists(): # page is defined -> redirect
             request.http_redirect(url)
         else:  # page will be created from template
             query = {'action': 'edit', 'backto': newpagename, 'template': quoteWikinameURL(sub_page_template)}
-            url = Page(request, newpagename).url(request, query, escape=0, relative=False)
+            url = Page(request, newpagename).url(request, query, relative=False)
             request.http_redirect(url)
