@@ -1166,7 +1166,7 @@ var gui_editor_link_href = "%(url)s";
 var gui_editor_link_text = "%(text)s";
 //-->
 </script>        
-""" % {'url': page.url(self.request, querystr={'action': 'edit', 'editor': 'gui', }, escape=0, relative=False),
+""" % {'url': page.url(self.request, querystr={'action': 'edit', 'editor': 'gui', }, relative=False),
        'text': _('Edit (GUI)', formatted=False),
       }
 
@@ -1584,8 +1584,7 @@ var gui_editor_link_text = "%(text)s";
             request.user.edit_on_doubleclick):
             if request.user.may.write(pagename): # separating this gains speed
                 querystr = wikiutil.escape(wikiutil.makeQueryString({'action': 'edit'}))
-                # TODO: remove escape=0 in 2.0
-                url = page.url(request, querystr, escape=0, relative=False)
+                url = page.url(request, querystr, relative=False)
                 bodyattr.append(''' ondblclick="location.href='%s'" ''' % url)
 
         # Set body to the user interface language and direction
